test/expected/define_sti.out
define SI as static int
             ^
14: error: "type static int" is illegal for built-in type
